EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==12/21/2010==
Derision: HoT: OP_SendFindableNPCs
gaeorn: bugfix for quest::movegrp to work with raids. no really, its fixed this time

==12/15/2010==
Trevius: Added an extra check for buffs while zoning to make sure it is a valid spell being applied.
Derision: Underfoot - Fix for /dismount not dispelling horse and Group Leadership fixes (opcode changes).
Congdar: fix for bot trading exploits

==12/13/2010==
gaeorn: fixed underfoot to properly handle new packet struct for LoadSpellSet_Struct
Derision: Underfoot - UCS should now retain /announce setting properly.

==12/11/2010==
gaeorn: bugfix for quest::movegrp to work with raids
Derision: UCS Support for Underfoot and later clients
Congdar: bot item trading fixes for lore, dual wield, augmenting, inspecting

==12/10/2010==
gaeorn: fixed quest::movegrp to work with raids
gaeorn: fixed casting group spells in a raid
gaeorn: (vanicae) code support for tactical mastery warrior aa
gaeorn: (vanicae) code support for touch of the divine cleric aa
gaeorn: (vanicae) item loot messages when in a raid
gaeorn: (Wolftousen) fixed spawn variance

==12/09/2010==
Derision: Updated HoT opcodes following patch.

==12/07/2010==
Trevius: Resolved a potential zone crash with memorizing spells.
Trevius: Added $item1_charges, and $item1_attuned exports for all 4 turn in slots item1-item4 for EVENT_ITEM.
Trevius: Fixed GetMinDMG() so it should work now.

==12/03/2010==
Caryatis: Fix for SpellResistChance effect.

Required SQL:
utils/sql/svn/1755_required_sql_fear_resist_aas.sql

==12/01/2010==
Caryatis: Fix for Reflect Spells and Healing Adept AAs
Caryatis: Showstats has been updated.

Required SQL:
utils/sql/svn/1754_required_sql_healing_adept_aa_fix.sql

Optional SQL:
utils/sql/svn/1753_optional_haste_cap_rule.sql

==11/30/2010==